[FEATURE]: Fixed the overflow edit menu issue

--- a/src/components/widgets/BookmarkWidget/bookmarkWidget.module.scss
+++ b/src/components/widgets/BookmarkWidget/bookmarkWidget.module.scss
@@ -1,89 +1,90 @@
 @import "/src/styles/variables.scss";
 @import "/src/styles/mixins.scss";
 
-.bookmarkWidgetContainer {
-	position: relative;
+.bookmarkWidget {
+	@include font-inter;
+	color: $widgetTextColor;
+	padding: 0 20px;
+	height: $widgetHeight;
+	width: 100%;
 
-	.bookmarkWidget {
-		@include font-inter;
-		color: $widgetTextColor;
-		padding: 0 20px;
-		height: $widgetHeight;
-		width: 100%;
+	border-radius: $widgetBorderRadius;
+	background-color: $widgetBackground;
 
-		border-radius: $widgetBorderRadius;
-		background-color: $widgetBackground;
+	display: flex;
+	align-items: center;
+	gap: 10px;
 
-		display: flex;
-		align-items: center;
-		gap: 10px;
+	cursor: pointer;
+	.faviconHolder {
+		border-radius: 50%;
+		overflow: hidden;
+		display: grid;
+		place-items: center;
+		background-color: $widgetImageHolderColor;
+		.favicon {
+			--size: 52px;
+			padding: 12px;
+			width: var(--size);
+			height: var(--size);
+			filter: contrast(1.1);
+		}
+	}
 
+	.nameWrapper {
+		flex: 1;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
+		font-size: 22px;
+		font-weight: 600;
+	}
+
+	.editBookmarkWidget {
+		position: relative;
+		padding: 10px;
 		cursor: pointer;
-		.faviconHolder {
-			border-radius: 50%;
-			overflow: hidden;
-			display: grid;
-			place-items: center;
-			background-color: $widgetImageHolderColor;
-			.favicon {
-				--size: 52px;
-				padding: 12px;
-				width: var(--size);
-				height: var(--size);
-				filter: contrast(1.1);
-			}
-		}
 
-		.nameWrapper {
-			flex: 1;
-			text-overflow: ellipsis;
-			overflow: hidden;
-			white-space: nowrap;
-			font-size: 22px;
-			font-weight: 600;
-		}
-
-		.editBookmarkWidget {
-			padding: 10px;
+		.moreOptions {
+			position: absolute;
+			border: 1px solid $widgetTextColor;
+			color: $widgetTextColor;
+			background-color: $widgetBackground;
 			cursor: pointer;
-		}
-	}
+			border-radius: 16px;
+			width: 140px;
+			height: 111px;
+			top: 10%;
+			// Added to keep the more options modal above the bookmark
+			z-index: 1;
 
-	.moreOptions {
-		position: absolute;
-		border: 1px solid $widgetTextColor;
-		color: $widgetTextColor;
-		background-color: $widgetBackground;
-		cursor: pointer;
-		border-radius: 16px;
-		width: 146px;
-		height: 111px;
-		top: 25px;
-		left: 290px;
-		// Added to keep the more options modal above the bookmark
-		z-index: 1;
-
-		:first-child {
-			border-bottom: 1px solid $widgetTextColor;
-		}
-
-		.moreOptionButton {
-			display: flex;
-			justify-content: space-around;
-			gap: 10px;
-			padding: 10px 12px 12px 20px;
-
-			.icon {
-				padding: 3px;
-				width: 20px;
-				margin-top: 5px;
-				// Added to remove the border below icon
-				border: none;
+			:first-child {
+				border-bottom: 1px solid $widgetTextColor;
 			}
-			.name {
-				padding: 3px;
-				width: 100%;
+
+			.moreOptionButton {
+				display: flex;
+				gap: 5px;
+				padding: 10px;
+
+				.icon {
+					padding: 3px;
+					width: 20px;
+					margin-top: 8px;
+					// Added to remove the border below icon
+					border: none;
+				}
+				.name {
+					padding: 3px;
+					margin: 5px;
+					text-align: left;
+					font-size: 16px;
+				}
 			}
 		}
 	}
+}
+
+.editMenuToggle {
+	right: 2%;
 }
